Start of Total Points updating
When the fixes buttons are pressed the total points now updates

--- a/ScoreCaclculator/app/src/main/res/layout/activity_main.xml
+++ b/ScoreCaclculator/app/src/main/res/layout/activity_main.xml
@@ -262,9 +262,10 @@
     <TableRow>
 
         <TextView
+            android:id="@+id/message_totalpoints"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="points"
+            android:text="0 Total Points"
             android:layout_weight="1"
             android:gravity="center"
             android:textSize="24sp"
