--- a/ScoreCaclculator/app/src/main/res/layout/activity_main.xml
+++ b/ScoreCaclculator/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,6 @@
     <TableRow
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
-
-
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -19,7 +17,6 @@
             android:layout_weight="4"
             android:text="@string/message_colourid"
             android:textSize="12sp" />
-
         <TextView
             android:id="@+id/message_colorptsfin"
             android:layout_width="0dp"
@@ -27,7 +24,6 @@
             android:layout_weight="1.75"
             android:text="@string/message_colourpts"
             android:textSize="12sp" />
-
     </TableRow>
 
     <TableRow
@@ -42,7 +38,6 @@
             android:textSize="12sp"
             android:text="@string/button_3fixes"
             />
-
         <Button
             android:onClick="button_fixes2"
             android:layout_width="0dp"
@@ -50,7 +45,6 @@
             android:layout_weight="1"
             android:textSize="12sp"
             android:text="@string/button_2fixes" />
-
         <Button
             android:onClick="button_fixes1"
             android:layout_width="0dp"
@@ -58,7 +52,6 @@
             android:layout_weight="1"
             android:textSize="12sp"
             android:text="@string/button_1fix" />
-
         <Button
             android:onClick="button_fixes0"
             android:layout_width="0dp"
@@ -66,11 +59,9 @@
             android:layout_weight="1"
             android:textSize="12sp"
             android:text="@string/button_0fixes" />
-
     </TableRow>
 
     <TableRow >
-
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -81,7 +72,6 @@
     </TableRow>
 
     <TableRow >
-
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -89,7 +79,6 @@
             android:gravity="left"
             android:layout_weight="1"
             />
-
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -98,7 +87,6 @@
             android:layout_weight="1"
             android:textSize="12sp"
             />
-
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -110,7 +98,6 @@
     </TableRow>
 
     <TableRow >
-
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -119,7 +106,6 @@
             android:layout_weight="1"
             android:textSize="12sp"
             />
-
         <EditText
             android:id="@+id/mNearBallEditText"
             android:layout_width="0dp"
@@ -128,7 +114,6 @@
             android:layout_weight="1"
             android:textSize="12sp"
             />
-
         <TextView
             android:id="@+id/message_nearballint"
             android:layout_width="0dp"
@@ -141,7 +126,6 @@
     </TableRow>
 
     <TableRow >
-
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -150,7 +134,6 @@
             android:layout_weight="1"
             android:textSize="12sp"
             />
-
         <EditText
             android:id="@+id/mFarBallEditText"
             android:layout_width="0dp"
@@ -159,7 +142,6 @@
             android:layout_weight="1"
             android:textSize="12sp"
             />
-
         <TextView
             android:id="@+id/message_farballint"
             android:layout_width="0dp"
@@ -172,7 +154,6 @@
     </TableRow>
 
     <TableRow >
-
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -180,7 +161,6 @@
             android:gravity="left"
             android:text="Robot Home"
             android:textSize="12sp" />
-
         <EditText
             android:id="@+id/mRobotHomeEditText"
             android:layout_width="0dp"
@@ -188,7 +168,6 @@
             android:layout_weight="1"
             android:gravity="center"
             android:textSize="12sp" />
-
         <TextView
             android:id="@+id/message_robothomeint"
             android:layout_width="0dp"
@@ -203,7 +182,18 @@
     <TableRow
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
-
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:visibility="invisible"
+            />
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:visibility="invisible"
+            />
         <Button
             android:onClick="button_update"
             android:layout_width="0dp"
@@ -213,9 +203,6 @@
     </TableRow>
 
     <TableRow >
-
-
-
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -224,17 +211,14 @@
             android:layout_weight="2"
             android:textSize="12sp"
             />
-
-
-
         <TextView
+            android:id="@+id/message_wbpointsint"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.25"
-            android:text="0"
+            android:text="WB"
             android:textSize="12sp"
             />
-
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -250,21 +234,21 @@
         android:layout_height="fill_parent">
 
         <Button
+            android:onClick="button_wbfailure"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/button_wbfailure" />
 
         <Button
+            android:onClick="button_wbsuccess"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/button_wbsuccess" />
-
     </TableRow>
 
     <TableRow>
-
         <TextView
             android:id="@+id/message_totalpoints"
             android:layout_width="match_parent"
@@ -274,20 +258,15 @@
             android:gravity="center"
             android:textSize="24sp"
             />
-
     </TableRow>
 
     <TableRow>
-
-
         <Button
             android:onClick="button_reset"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/button_reset" />
-
-
     </TableRow>
 
 </TableLayout>
